<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivThumbnail"
            android:layout_width="0dp"
            android:layout_height="194dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/news_images"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_default_margin"
            android:layout_marginTop="@dimen/activity_default_margin"
            android:layout_marginEnd="@dimen/activity_default_margin"
            android:text="@string/news_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivThumbnail" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_default_margin"
            android:layout_marginTop="@dimen/activity_default_margin"
            android:layout_marginEnd="@dimen/activity_default_margin"
            android:text="@string/news_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

        <Button
            android:id="@+id/btnOpenLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_default_margin"
            android:layout_marginTop="@dimen/activity_default_margin"
            android:layout_marginBottom="@dimen/activity_default_margin"
            android:text="@string/open_link"
            style="?attr/borderlessButtonStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDescription" />

        <ImageView
            android:id="@+id/ivFavorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_default_margin"
            app:layout_constraintBottom_toBottomOf="@+id/btnOpenLink"
            app:layout_constraintEnd_toStartOf="@+id/ivShare"
            app:layout_constraintTop_toTopOf="@+id/btnOpenLink"
            app:layout_constraintVertical_bias="0.541"
            app:srcCompat="@drawable/ic_favorite_24"
            android:contentDescription="@string/favorites_icon" />

        <ImageView
            android:id="@+id/ivShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_default_margin"
            app:layout_constraintBottom_toBottomOf="@+id/btnOpenLink"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btnOpenLink"
            app:srcCompat="@drawable/ic_share_24"
            android:contentDescription="@string/share_icon" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>